--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
         <p><label for="confirmPassword">Confirm Password:</label></p>
         <input id="confirmPassword" type="password" placeholder="Confirm password" required />
         <p><button id="submitRegister">Register</button></p>
-        <p uf><button id="toggleLogin">Login Instead</button></p>
+        <p><button id="toggleLogin">Login Instead</button></p>
       </div>
       <p id="errorMessage" style="color: red; display: none;"></p>
     </div>
@@ -61,19 +61,19 @@
   <div id="main-view" style="display: none;">
     <div class="container">
       <h3>Fruits:</h3>
-      <div id="row1" class="row"></div>
+      <div id="grid1" class="grid"></div>
     </div>
     <div class="container">
       <h3>Snacks & Drinks:</h3>
-      <div id="row2" class="row"></div>
+      <div id="grid2" class="grid"></div>
     </div>
     <div class="container">
       <h3>Foods:</h3>
-      <div id="row3" class="row"></div>
+      <div id="grid3" class="grid"></div>
     </div>
     <div class="container">
       <h3>Meat & Vegetable:</h3>
-      <div id="row4" class="row"></div>
+      <div id="grid4" class="grid"></div>
     </div>
   </div>
 
